--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-torch
-torchvision
-transformers
-gradio
-pillow
-numpy
+torch>=1.9.0
+torchvision>=0.10.0
+transformers>=4.21.0
+gradio>=3.0.0
+pillow>=8.0.0
+numpy>=1.21.0
+requests>=2.25.0
+httpx>=0.23.0
